--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,14 +7,20 @@
     <title>Blogs</title>
 </head>
 <body>
+    <nav>
+        <a href="/frontend/"><img src="/public/logo.png" alt=""></a>
+        <div>
+            <a href="/frontend/">Főoldal</a>
+        </div>
+        <div>
+            <a href="/frontend/create/"><button>Új blog</button></a>
+        </div>
+    </nav>
     <div class="container">
+        <h1>Blogok</h1>
         <div class="blogs">
-            <h1>Blogok</h1>
             <div class="blog">
-                <div class="title-container">
-                    <h1>Szeva!</h1>
-                    <div>2025-01-01</div>
-                </div>
+                <h1>Betöltés...</h1>
             </div>
         </div>
     </div>
